<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="email_hint">example@domain.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_as_new">Login as new account</string>
    <string name="welcome">Welcome!!</string>
    <string name="let_s_go_to_the_instructions_page">Let\'s go to the instructions page…</string>
    <string name="go_to_instructions">Go To instructions</string>
    <string name="instructions">Instructions</string>
    <string name="go_to_shoe_list">Go to shoe list</string>
    <string name="please_follow_the_instructions">Please, follow the instructions before going to the shoe list!</string>
    <string name="instructions_steps">"step 1:  \nstep 2:\nstep 3:"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_action_button">floating action button</string>
    <string name="name">Name</string>
    <string name="name_hint">Sneakers</string>
    <string name="company">Company</string>
    <string name="company_hint">adidas</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="size_hint">43.0</string>
    <string name="description_hint">about the shoe…</string>
    <string name="description">Description</string>
    <string name="sizeFormat">Size: %s</string>
    <string name="logout">Logout</string>
</resources>
