<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{shoe.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/name_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{shoe.company}"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="@string/company_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{shoe.description}"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="@string/description_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto"
                android:text="@{@string/sizeFormat(shoe.size)}"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="Size: 40.0" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>